# ECOv002-L3T-L4T-JET

./: README.md  pyproject.toml
ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01/: ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01.json  ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01_EmisWB.tif  ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01_LST_err.tif  ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01_QC.tif  ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01_cloud.tif  ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01_water.tif
ECOv002_L2T_STARS_21485_013_11SPS_20220420_0700_01/: ECOv002_L2T_STARS_21485_013_11SPS_20220420_0700_01.json  ECOv002_L2T_STARS_21485_013_11SPS_20220420_0700_01_NDVI-UQ.tif  ECOv002_L2T_STARS_21485_013_11SPS_20220420_0700_01_albedo-UQ.tif
ECOv002_L3T_L4T_JET/: ECOSTRESS_granule.py  ECOSTRESS_tiled_granule.py  ECOv002_L3T_L4T_JET.py  L2TLSTE.py  L2TSTARS.py  L3TJET.py  L3TMET.py  L3TSEB.py  L3TSM.py  L4TESI.py  L4TWUE.py
ECOv002_L3T_L4T_JET/BESS/: BESS.py
ECOv002_L3T_L4T_JET/DAAC/: HTTP.py
ECOv002_L3T_L4T_JET/ECOSTRESS/: ECOSTRESS.py  ECOSTRESS_C1_filenames.py  ECOSTRESS_C2.py  ECOSTRESS_HDF5_granule.py  ECOSTRESS_granule.py  ECOSTRESS_gridded_tiled_granule.py  ECOSTRESS_swath_granule.py  JSON_highlight.py  L1B_GEO.py  L1_RAD.py  L2G_CLOUD.py  L2_CLOUD.py  L2_LSTE.py  L2_STARS.py  L3T_ET_PTJPL_simulation.py  L3_ET_ALEXI.py  L3_ET_PTJPL.py  L3_JET.py  L4T_ESI_PTJPL_simulation.py  L4T_WUE_simulation.py  L4_ESI.py  L4_ESI_ALEXI.py  L4_WUE.py  __init__.py  filenames.py  find_ECOSTRESS_C1_geometry.py  find_ECOSTRESS_C1_scene.py  find_ECOSTRESS_C1_tile.py  ingest.py  reprocess_JET.py  runconfig.py  scan_resampling.py  test_L2G_L2T_LSTE.py  version.py
ECOv002_L3T_L4T_JET/ECOSTRESS/calval/: 2024-06-27_ECOSTRESS_calval_C1_C2.py  2024-06-27_ECOSTRESS_calval_sites.csv  2024-08-02_tower_long_list.csv  2024-08-02_tower_short_list.csv  2024-08-16_ECOSTRESS_calval_C1_C2.py  2024-09-08_ECOSTRESS_calval_C1_C2.py  extract_tower_calval_from_C1_granule.py  extract_tower_calval_from_C2_granule.py  generate_3x3_subset_geometry.py  tower.py
ECOv002_L3T_L4T_JET/ECOSTRESS/calval/legacy/: calval.py  calval_NEON.py  calval_final_50.py  calval_harvard.py  final_50_sites.csv
ECOv002_L3T_L4T_JET/ECOSTRESS/example_runconfigs/: L2G_L2T_LSTE.xml  L2T_STARS.xml  L3G_L4G_ALEXI.xml  L3G_L4G_PTJPL.xml  L3T_L4T_ALEXI.xml  L3T_L4T_PTJPL.xml
ECOv002_L3T_L4T_JET/ECOSTRESS_colors/: __init__.py
ECOv002_L3T_L4T_JET/FLiES/: FLiES.py  FLiESLUT.py
ECOv002_L3T_L4T_JET/GEOS5FP/: GEOS5FP.py
ECOv002_L3T_L4T_JET/LPDAAC/: LPDAACDataPool.py
ECOv002_L3T_L4T_JET/MCD12/: MCD12C1.py
ECOv002_L3T_L4T_JET/MOD16/: MOD16.py
ECOv002_L3T_L4T_JET/NLCD/: NLCD.py  __init__.py
ECOv002_L3T_L4T_JET/ORNL/: MODISCI.py  ORNL
ECOv002_L3T_L4T_JET/PTJPL/: PTJPL.py
ECOv002_L3T_L4T_JET/PTJPLSM/: PTJPLSM.py
ECOv002_L3T_L4T_JET/SRTM/: SRTM.py
ECOv002_L3T_L4T_JET/STIC/: STIC.py
ECOv002_L3T_L4T_JET/SoilGrids/: SoilGrids.py  __init__.py
