[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv002_L3T_L4T_JET"
version = "1.0.0"
description = "ECOSTRESS Collection 2 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pillow",
    "geopandas",
    "h5py",
    "matplotlib",
    "msgpack",
    "msgpack_numpy",
    "numpy",
    "pyproj",
    "rasterio",
    "shapely",
    "scikit-image",
    "affine",
    "astropy",
    "pykdtree",
    "pyresample",
    "rasters",
    "scipy",
    "six",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",  # For test coverage reports (optional)
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv002_L3T_L4T_JET"
