[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECOv002_L3T_L4T_JET"
version = "1.0.0"
description = "ECOSTRESS Collection 2 JPL Evapotranspiration (JET) Product Generating Executable (PGE)"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored_logging",
    "pandas",
    "pillow",
    "geopandas",
    "h5py",
    "matplotlib",
    "msgpack",
    "msgpack_numpy",
    "netCDF4",
    "numpy",
    "pyproj",
    "rasterio",
    "shapely",
    "scikit-image",
    "affine",
    "astropy",
    "pycksum",
    "pykdtree",
    "pyresample",
    "rasters",
    "scikit-learn",
    "scipy",
    "six",
    "tensorflow",
    "untangle",
    "xmltodict"
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]

[tool.setuptools.package-data]
ECOv002_L3T_L4T_JET = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/ECOSTRESS-Collection-2/ECOv002_L3T_L4T_JET"

[tool.setuptools.packages.find]
include = ["ECOv002_L3T_L4T_JET"]
exclude = ["ECOv002_L2T_STARS_21485_013_11SPS_20220420_0700_01", "ECOv002_L2T_LSTE_21485_013_11SPS_20220420T211350_0601_01"]
